@startuml
note "Like a Supermarket\nwhere app-s can be\ndownloaded from" as NoteRepo
class fdroid_v1.Repo <<AggregatRoot>><<JsonEntity>> {
  mirrors[]
  name
  description
  icon
  address
  timestamp
}
class fdroid_v1.App <<JsonEntity>> {
  packageName
  added
  lastUpdated
  icon
  categories[]
}

note "Compatibility Info\n+ APK Download" as NoteVersion
class fdroid_v1.Version <<JsonEntity>> {
  packageName
  apkName
  versionCode
  versionName
  added
  size

  nativecode
  minSdkVersion
  targetSdkVersion
  maxSdkVersion
}

note "App Translation" as fdroid_v1.NoteLocalized
class fdroid_v1.Localized <<JsonEntity>> {
  whatsNew
  name
  summary
  description
  icon
  phoneScreenshots[]

}

fdroid_v1.Repo *-- fdroid_v1.App
fdroid_v1.App *-- fdroid_v1.Localized : Language
fdroid_v1.Repo *-- fdroid_v1.Version
fdroid_v1.App o-- fdroid_v1.Version

fdroid_v1.Repo . NoteRepo
fdroid_v1.NoteLocalized .. fdroid_v1.Localized
fdroid_v1.Version - NoteVersion
@enduml